# mice_data_analysis

./: CMakeLists.txt  Diagram2.dia  Diagram2.dia~  README.md  structure.dia  structure.dia~
src/: _sync  bar.h  conv  convol.c  cosinor.c  curr  curr.c  dfa.c  file.c  file.h  generate.sh  main.c  mathematic.c  mathematic.h  plot.c  plot.h  run.sh  search_replace.c  solt  solt.c  stats  ststic.c  sync.1  sync.c  tags  test-new.c  test.c  test.c.1  tmp  tt  tt.c  usage.c  usage.h  utility.c  utility.h
